--- a/wiki/InstallationNotes.wiki
+++ b/wiki/InstallationNotes.wiki
@@ -52,7 +52,7 @@ Channel: 10
 Connecting...done
 Receiving "(null)"... <?xml version="1.0"?>    <!DOCTYPE folder-listing SYSTEM "obex-folder-listing.dtd">    <folder-listing version="1.0"></folder-listing>doneDisconnecting...done
 }}}
-Then you are done.If it prints
+Then you are done. However, if it prints
 {{{
 Browsing 00:19:79:86:EB:BC ...
 Channel: 10
@@ -63,6 +63,16 @@ Still trying to connect
 Connecting...failed: connect
 Still trying to connect
 }}}
-then continue reading.
-
-You need to pair your phone.
+then need to pair your phone:
+{{{
+wajig install pkg-config libdbus-1-dev
+}}}
+compile and run the:
+{{{
+./passkey-agent --default 1234
+}}}
+it is in the `/usr/share/doc/bluez-utils/examples/`. Now run:
+{{{
+obexftp -b 00:19:79:86:EB:BC -l
+}}}
+on the phone a dialog will popup asking you to enter a pin, enter the 1234, as you gave to the passkey-agent.That should be it, it should print the listing and you are done.
