Edited wiki page through web user interface.

--- a/wiki/InstallationNotes.wiki
+++ b/wiki/InstallationNotes.wiki
@@ -1,6 +1,6 @@
 #summary How to get it all running.
 
-== Bluetooth installation ==
+= Install Bluetooth =
 
 {{{
 wajig install bluetooth
@@ -86,3 +86,11 @@ obexftp -b 00:19:79:86:EB:BC -p /tmp/something
 The phone will ask you if you want to open it or save it somewhere.
 
 Another option is to mount the memory card as a USB mass storage device, unfortunately this only works on some phones.
+
+= Install Python =
+
+Go to http://sourceforge.net/project/showfiles.php?group_id=154155 and install PythonForS60 package and then the PythonScriptShell. Depending on your version of Symbian, if for example you have 2nd Edition, FP3, you need to install these two files:
+{{{
+PythonForS60_1_3_15_2ndEdFP3.SIS 
+PythonScriptShell_1_3_15_2ndEdFP3.SIS
+}}}
