--- a/wiki/InstallationNotes.wiki
+++ b/wiki/InstallationNotes.wiki
@@ -71,7 +71,7 @@ compile and run the:
 {{{
 ./passkey-agent --default 1234
 }}}
-it is in the `/usr/share/doc/bluez-utils/examples/`. Leave it running, start another terminal and:
+whose source is in the `/usr/share/doc/bluez-utils/examples/`. Leave it running, start another terminal and:
 {{{
 obexftp -b 00:19:79:86:EB:BC -l
 }}}
