--- a/wiki/pyconnect.wiki
+++ b/wiki/pyconnect.wiki
@@ -93,7 +93,14 @@ ondra@syslik:~/bluepys60/pyconnect$ ./python-s60 manager.py
 starting
 done.
 }}}
-This will do the commands specified in `commands.py` and the first terminal will look like this:
+This will execute the `commands()` function in `commands.py`:
+{{{
+def commands(send, recv):
+    send("test.py",r"E:\ondra\test.py")
+    send("test.py",r"E:\ondra\test2.py")
+    recv(r"E:\ondra\test2.py", "/tmp/x")
+}}}
+and the first terminal will look like this:
 {{{
 ondra@syslik:~/bluepys60/pyconnect$ python manager.py
 starting
